# DCO_benchmarks_ResInfer

./: CMakeLists.txt  README.md  make_dir.sh  perf_result_6_openai-1536-angular.txt  perf_result_6_sift-128-euclidean.txt  perf_result_{0}_openai-1536-angular.txt  perf_result_{0}_sift-128-euclidean.txt  set.sh
DATA/: compute_gt.py  data_split.py  finger.py  ivf.py  ivfnew.py  linear.py  linearforindex.py  opq.py  pca.py  pcanew.py  process_gt.py  randomized.py
include/: adsampling.h  finger.h  pca.h  pq.h
include/hnswlib/: hnswalg.h
include/ivf/: ivf.h
script/: benchmark_cpu_metrics.sh  clear.sh  finger.sh  index_hnsw.sh  index_ivf.sh  index_opq.sh  index_pca.sh  linear.sh  linear_for_index.sh  pre_compute.sh  run.sh  search_for_index.sh  search_hnsw.sh  search_hnsw_avx512.sh  search_hnsw_finger.sh  search_ivf.sh  search_ivf_avx512.sh  test_glove_cpu_metrics.sh
src/: CMakeLists.txt  index_hnsw.cpp  logger_hnsw_opq.cpp  logger_hnsw_pca.cpp  logger_ivf_opq.cpp  logger_ivf_pca.cpp  search_hnsw.cpp  search_ivf.cpp
